[package]
name = "doc_sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.68"
lopdf = "0.32.0"
secp256k1 = { version = "0.28.2", features = ["global-context", "alloc", "recovery"] }
sha2 = "0.10.8"
wasm-bindgen = "0.2.91"
